--- a/backend/category/src/main/resources/application.yaml
+++ b/backend/category/src/main/resources/application.yaml
@@ -1,19 +1,18 @@
 server:
-  port: 8080
+  port: 8010
 
 spring:
+  application:
+    name: category
   data:
     mongodb:
       authentication-database: admin
       username: bogdan
       password: password
-      database: product_database
-      port: 27017
+      database: category_database
+      port: 27018
       host: localhost
       auto-index-creation: true
-
-  application:
-    name: product
 
 eureka:
   client:
