--- a/backend/product/docker-compose.yml
+++ b/backend/product/docker-compose.yml
@@ -9,7 +9,7 @@ services:
     ports:
       - "27017:27017"
     volumes:
-      - mongodb-data:/data/db
+      - mongodb-data:/data/product/db
     networks:
       - mongodb-network
 
@@ -22,10 +22,10 @@ services:
       ME_CONFIG_MONGODB_SERVER: mongodb
       ME_CONFIG_BASICAUTH_USERNAME: bogdan
       ME_CONFIG_BASICAUTH_PASSWORD: password
-      #ME_CONFIG_MONGODB_AUTH_DATABASE: admin
+      ME_CONFIG_MONGODB_AUTH_DATABASE: admin
       ME_CONFIG_MONGODB_ADMINUSERNAME: bogdan
       ME_CONFIG_MONGODB_ADMINPASSWORD: password
-      ME_CONFIG_MONGODB_URL: mongo://bogdan:password@mongodb:27018/
+      ME_CONFIG_MONGODB_URL: mongo://bogdan:password@mongodb:27017/
 
     volumes:
       - compass-data:/root/.mongodb/compass/
