--- a/backend/category/src/main/resources/application.yaml
+++ b/backend/category/src/main/resources/application.yaml
@@ -18,3 +18,7 @@ eureka:
   client:
     serviceUrl:
       defaultZone: http://localhost:8761/eureka
+    fetch-registry: true
+    register-with-eureka: true
+  instance:
+    prefer-ip-address: true
