--- a/backend/pom.xml
+++ b/backend/pom.xml
@@ -15,6 +15,8 @@
     <module>product</module>
     <module>category</module>
     <module>eureka-server</module>
+      <module>clients</module>
+    <module>notification</module>
   </modules>
 
 
@@ -57,6 +59,10 @@
       <groupId>org.springframework.boot</groupId>
       <artifactId>spring-boot-starter-test</artifactId>
       <version>3.0.5</version>
+    </dependency>
+    <dependency>
+      <groupId>org.springframework.cloud</groupId>
+      <artifactId>spring-cloud-starter-openfeign</artifactId>
     </dependency>
   </dependencies>
 
