--- a/backend/product/src/main/resources/application.yml
+++ b/backend/product/src/main/resources/application.yml
@@ -19,3 +19,7 @@ eureka:
   client:
     serviceUrl:
       defaultZone: http://localhost:8761/eureka
+    fetch-registry: true
+    register-with-eureka: true
+  instance:
+    prefer-ip-address: true
