start adding amqp support

--- a/backend/eureka-server/src/main/resources/application.yml
+++ b/backend/eureka-server/src/main/resources/application.yml
@@ -1,3 +1,15 @@
+management:
+  tracing:
+    sampling:
+      probability: 1.0
+    propagation:
+      type: w3c
+
+
+logging:
+  pattern:
+    level: "%5p[${spring.application.name:},%X{traceId:-},%X{spanId:-}]"
+
 spring:
   application:
     name: eureka-server
