--- a/backend/category/src/main/resources/application.yaml
+++ b/backend/category/src/main/resources/application.yaml
@@ -1,6 +1,17 @@
 server:
   port: 8010
 
+management:
+  tracing:
+    sampling:
+      probability: 1.0
+    propagation:
+      type: w3c
+
+
+logging:
+  pattern:
+    level: "%5p[${spring.application.name:},%X{traceId:-},%X{spanId:-}]"
 spring:
   application:
     name: category
