--- a/backend/product/src/main/resources/application.yml
+++ b/backend/product/src/main/resources/application.yml
@@ -1,7 +1,21 @@
 server:
   port: 8080
 
+management:
+  tracing:
+    sampling:
+      probability: 1.0
+    propagation:
+      type: w3c
+
+
+logging:
+  pattern:
+    level: "%5p[${spring.application.name:},%X{traceId:-},%X{spanId:-}]"
+
+
 spring:
+
   data:
     mongodb:
       authentication-database: admin
@@ -11,9 +25,9 @@ spring:
       port: 27017
       host: localhost
       auto-index-creation: true
-
   application:
     name: product
+
 
 eureka:
   client:
