--- a/backend/eureka-server/pom.xml
+++ b/backend/eureka-server/pom.xml
@@ -11,6 +11,18 @@
 
     <artifactId>eureka-server</artifactId>
 
+
+    <packaging>jar</packaging>
+
+    <build>
+        <plugins>
+            <plugin>
+                <groupId>org.springframework.boot</groupId>
+                <artifactId>spring-boot-maven-plugin</artifactId>
+            </plugin>
+        </plugins>
+    </build>
+
     <properties>
         <maven.compiler.source>17</maven.compiler.source>
         <maven.compiler.target>17</maven.compiler.target>
