--- a/backend/notification/src/main/resources/application.yaml
+++ b/backend/notification/src/main/resources/application.yaml
@@ -31,6 +31,8 @@ spring:
           connectiontimeout: 5000
           timeout: 3000
           writetimeout: 5000
+  rabbitmq:
+    addresses: localhost:5672
 
 eureka:
   client:
@@ -42,3 +44,10 @@ eureka:
     prefer-ip-address: true
 
 
+rabbitmq:
+  exchanges:
+    internal: internal.exchange
+  queue:
+    notification: notification.queue
+  routing-key:
+    internal-notification: internal.notification.routing-key
