--- a/backend/pom.xml
+++ b/backend/pom.xml
@@ -20,6 +20,9 @@
       <module>amqp</module>
       <module>order</module>
       <module>inventory</module>
+      <module>security</module>
+    <module>apigw</module>
+    <module>common-dependencies</module>
   </modules>
 
 
@@ -30,6 +33,7 @@
     <spring.boot.maven.plugin.version>3.0.5</spring.boot.maven.plugin.version>
     <spring.boot.dependencies.version>3.0.5</spring.boot.dependencies.version>
     <spring-cloud.version>2022.0.2</spring-cloud.version>
+    <image>bogdansoftware/${project.artifactId}:${project.version}</image>
   </properties>
 
   <dependencyManagement>
@@ -73,11 +77,50 @@
     <pluginManagement><!-- lock down plugins versions to avoid using Maven defaults (may be moved to parent pom) -->
      <plugins>
        <plugin>
+         <groupId>com.google.cloud.tools</groupId>
+         <artifactId>jib-maven-plugin</artifactId>
+         <version>3.3.2</version>
+         <configuration>
+           <from>
+             <image>eclipse-temurin:17</image>
+             <platforms>
+               <platform>
+                 <architecture>amd64</architecture>
+                 <os>linux</os>
+               </platform>
+             </platforms>
+           </from>
+           <to>
+            <tags>
+              <tag>latest</tag>
+            </tags>
+           </to>
+         </configuration>
+       </plugin>
+       <plugin>
          <groupId>org.springframework.boot</groupId>
          <artifactId>spring-boot-maven-plugin</artifactId>
          <version>${spring.boot.maven.plugin.version}</version>
+         <executions>
+           <execution>
+             <goals>
+               <goal>repackage</goal>
+             </goals>
+           </execution>
+         </executions>
        </plugin>
      </plugins>
     </pluginManagement>
+    <plugins>
+      <plugin>
+        <groupId>org.apache.maven.plugins</groupId>
+        <artifactId>maven-compiler-plugin</artifactId>
+        <version>3.11.0</version>
+        <configuration>
+          <source>17</source>
+          <target>17</target>
+        </configuration>
+      </plugin>
+    </plugins>
   </build>
 </project>
