--- a/backend/apigw/pom.xml
+++ b/backend/apigw/pom.xml
@@ -42,7 +42,18 @@
             <groupId>io.github.openfeign</groupId>
             <artifactId>feign-micrometer</artifactId>
         </dependency>
-
+        <dependency>
+            <groupId>ro.bogdansoftware</groupId>
+            <artifactId>common-dependencies</artifactId>
+            <version>1.0-SNAPSHOT</version>
+            <scope>compile</scope>
+        </dependency>
+        <dependency>
+            <groupId>ro.bogdansoftware</groupId>
+            <artifactId>clients</artifactId>
+            <version>1.0-SNAPSHOT</version>
+            <scope>compile</scope>
+        </dependency>
 
     </dependencies>
 </project>
