--- a/backend/clients/pom.xml
+++ b/backend/clients/pom.xml
@@ -17,4 +17,13 @@
         <project.build.sourceEncoding>UTF-8</project.build.sourceEncoding>
     </properties>
 
+    <dependencies>
+        <dependency>
+            <groupId>ro.bogdansoftware</groupId>
+            <artifactId>common-dependencies</artifactId>
+            <version>1.0-SNAPSHOT</version>
+            <scope>compile</scope>
+        </dependency>
+    </dependencies>
+
 </project>
