--- a/backend/security/pom.xml
+++ b/backend/security/pom.xml
@@ -122,6 +122,12 @@
             <artifactId>amqp</artifactId>
             <version>1.0-SNAPSHOT</version>
         </dependency>
+        <dependency>
+            <groupId>ro.bogdansoftware</groupId>
+            <artifactId>common-dependencies</artifactId>
+            <version>1.0-SNAPSHOT</version>
+            <scope>compile</scope>
+        </dependency>
     </dependencies>
 
 
