added transactions to inventory

--- a/backend/inventory/pom.xml
+++ b/backend/inventory/pom.xml
@@ -91,5 +91,9 @@
         <groupId>redis.clients</groupId>
         <artifactId>jedis</artifactId>
     </dependency>
+    <dependency>
+        <groupId>com.h2database</groupId>
+        <artifactId>h2</artifactId>
+    </dependency>
 </dependencies>
 </project>
