--- a/backend/pom.xml
+++ b/backend/pom.xml
@@ -25,6 +25,12 @@
     <module>common-dependencies</module>
   </modules>
 
+  <parent>
+    <groupId>org.springframework.boot</groupId>
+    <artifactId>spring-boot-starter-parent</artifactId>
+    <version>3.1.0</version>
+  </parent>
+
 
   <properties>
     <project.build.sourceEncoding>UTF-8</project.build.sourceEncoding>
