--- a/backend/eureka-server/src/main/resources/application-docker.yaml
+++ b/backend/eureka-server/src/main/resources/application-docker.yaml
@@ -6,7 +6,7 @@ management:
       type: w3c
   zipkin:
     tracing:
-      endpoint: http://zipkin:9411
+      endpoint: http://zipkin:9411/api/v2/spans
 
 logging:
   pattern:
