--- a/backend/file/pom.xml
+++ b/backend/file/pom.xml
@@ -15,7 +15,7 @@
         <maven.compiler.source>17</maven.compiler.source>
         <maven.compiler.target>17</maven.compiler.target>
         <project.build.sourceEncoding>UTF-8</project.build.sourceEncoding>
-        <image>bogdantamba/${project.artifactId}:${project.version}</image>
+        <image>gcr.io/just-palace-389214/${project.artifactId}:${project.version}</image>
     </properties>
 
 
