--- a/backend/notification/src/main/resources/application-docker.yaml
+++ b/backend/notification/src/main/resources/application-docker.yaml
@@ -9,7 +9,7 @@ management:
       type: w3c
   zipkin:
     tracing:
-      endpoint: http://zipkin:9411
+      endpoint: http://zipkin:9411/api/v2/spans
 logging:
   pattern:
     level: "%5p[${spring.application.name:},%X{traceId:-},%X{spanId:-}]"
