--- a/backend/order/pom.xml
+++ b/backend/order/pom.xml
@@ -115,6 +115,11 @@
             <artifactId>spring-boot-starter-amqp</artifactId>
         </dependency>
         <dependency>
+            <groupId>com.stripe</groupId>
+            <artifactId>stripe-java</artifactId>
+            <version>23.2.0</version>
+        </dependency>
+        <dependency>
             <groupId>ro.bogdansoftware</groupId>
             <artifactId>amqp</artifactId>
             <version>1.0-SNAPSHOT</version>
