--- a/backend/apigw/src/main/resources/application.yml
+++ b/backend/apigw/src/main/resources/application.yml
@@ -41,6 +41,10 @@ management:
       probability: 1.0
     propagation:
       type: w3c
+  zipkin:
+    tracing:
+      endpoint: http://localhost:9411/api/v2/spans
+
 logging:
   pattern:
     level: "%5p[${spring.application.name:},%X{traceId:-},%X{spanId:-}]"
