--- a/backend/order/src/main/resources/application.yaml
+++ b/backend/order/src/main/resources/application.yaml
@@ -11,6 +11,8 @@ spring:
     database-platform: "org.hibernate.dialect.PostgreSQLDialect"
   application:
     name: order
+  rabbitmq:
+    addresses: localhost:5672
 server:
   port: 8301
 
