--- a/backend/category/pom.xml
+++ b/backend/category/pom.xml
@@ -105,6 +105,12 @@
             <groupId>io.github.openfeign</groupId>
             <artifactId>feign-micrometer</artifactId>
         </dependency>
+        <dependency>
+            <groupId>ro.bogdansoftware</groupId>
+            <artifactId>clients</artifactId>
+            <version>1.0-SNAPSHOT</version>
+            <scope>compile</scope>
+        </dependency>
     </dependencies>
 
 </project>
