--- a/backend/k8s/minikube/cart-persistence/cart-persistence-deployment.yaml
+++ b/backend/k8s/minikube/cart-persistence/cart-persistence-deployment.yaml
@@ -30,6 +30,7 @@ spec:
               value: docker
           image: bogdantamba/cart-persistence:latest
           name: cart-persistence
+          imagePullPolicy: Always
           ports:
             - containerPort: 8256
           resources: {}
