--- a/backend/order/src/main/resources/application-docker.yaml
+++ b/backend/order/src/main/resources/application-docker.yaml
@@ -1,6 +1,6 @@
 spring:
   datasource:
-    url: "jdbc:postgresql://order-database:5433/Order"
+    url: "jdbc:postgresql://order-database/Order"
     username: "bogdan"
     password: "pass"
 
